add signup route and handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -44,7 +44,7 @@
       >
         Sign in
       </button>
-      <a href="./signup.html">Create an account</a>
+      <a href="/signup">Create an account</a>
     </form>
   </section>
 </div>
