--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,5 +24,5 @@
   <body class="text-center">
     {{{body}}}
   </body>
-  <script src="/public/js/login.js"></script>
+  <script src="/js/login.js"></script>
 </html>
