add user-details inside userprofile from logged in user

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,8 +6,7 @@
           src="/images/logo.webp"
           alt="meat image"
           height="200px"
-          width="200px
-            "
+          width="200px"
         />
       </div>
       <div class="text-yellow-100 text-2xl mt-2 sm:w-96">
