--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,7 @@
       <!-- {{#if logged_in}} -->
           <a href="/">HOME</a>
 
-          <a href="/dashboard">PROFILE</a>
+          <a href="/userprofile">PROFILE</a>
           <a href="/logout" id="logout">LOGOUT</a>
 
           <!-- {{else}} -->
