--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -23,7 +23,7 @@
       {{/if}}
     </nav>
   </header>
-  <main class="user-profile">
+  <main class="user-profile mb-5">
     <div class="row gutters-sm">
       <!--customer image of sort-->
       <div class="col-md-4 mb-3">
@@ -92,7 +92,7 @@
             <div class="row">
               <div class="col-sm-12">
                 <a
-                  class="btn btn-info"
+                  class="btn btn-primary"
                   target="__blank"
                   href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills"
                 >Edit</a>
@@ -104,18 +104,9 @@
       <!--past invoices if any-->
       <div class="card mt-3">
         <ul class="list-group list-group-flush">
-          <li
-            class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-          >
-            <h6 class="mb-0">Order Date maybe</h6>
-            <button class="btn btn-outline-primary">invoices</button>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-          >
-            <h6 class="mb-0">Order Date maybe</h6>
-            <button class="btn btn-outline-primary">invoices</button>
-          </li>
+          {{#each customer.invoices as |invoice|}}
+          {{>invoices}}
+          {{/each}}
         </ul>
       </div>
     </div>
