--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,7 +1,7 @@
 <div class="flex-column justify-space-around">
   <header class="page-header">
     <h1>
-      <a href="/"><img
+      <a href="/userprofile"><img
           src="/images/logo.webp"
           alt=""
           height="100px"
@@ -11,7 +11,7 @@
     <nav>
       <!-- Conditionally render login or logout links -->
       {{#if logged_in}}
-        <a href="/">HOME</a>
+        {{!-- <a href="/">HOME</a> --}}
 
         <a href="/userprofile">PROFILE</a>
         <a href="/logout" id="logout">LOGOUT</a>
