add customer edit route, customer can edit their details

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -91,11 +91,10 @@
             <hr />
             <div class="row">
               <div class="col-sm-12">
-                <a
-                  class="btn btn-primary"
-                  target="__blank"
-                  href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills"
-                >Edit</a>
+                <button class="btn btn-primary" type="submit" data-id={{customer.id}} onclick="goToUserEdit(event)"
+          >
+            EDIT
+          </button>
               </div>
             </div>
           </div>
