add fn to go to show the order view for the particular user

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -41,7 +41,7 @@
                 <p class="text-secondary mb-1">SOme company they work at</p>
 
                 <p class="text-muted font-size-sm">company name maybe</p>
-                <button class="btn btn-primary">Order</button>
+                <button class="btn btn-primary" data-id={{customer.id}} onclick="goToOrderPage(event)">Order</button>
                 <!-- <button class="btn btn-outline-primary">Message</button> -->
               </div>
             </div>
