--- a/views/orders.handlebars
+++ b/views/orders.handlebars
@@ -23,28 +23,36 @@
           <!-- {{/if}} -->
     </nav>
   </header>
-  <main class="order">
-    <!-- Render the signup-->
-    <div class="col-md-6 signup-section">
-      <h2>Your conracted orders
-        {{customer.name}}</h2>
 
-      <form class="form signup-form">
-        <div class="form-group">
-          <label for="name-signup">product name</label>
-          <input class="form-input" type="text" id="name-signup" />
-        </div>
-        <div class="form-group">
-          <button
-            class="btn btn-primary"
-            type="submit"
-            onclick="placeOrder(event)"
-            data-id={{customer.id}}
-          >
-            Order
-          </button>
-        </div>
-      </form>
-    </div>
+  <main class="order">
+
+	<form class="orderForm">
+		{{!-- Render list of items --}}
+		<div class="container">
+			{{!-- Render header --}}
+			<div class="row">
+				<div class="col-3 text-center itemName">Item Name</div>
+				<div class="col text-center itemQuantity">Quantity</div>
+				<div class="col text-center itemPrice">Unit Price</div>
+				<div class="col text-center itemDiscount">Discount</div>
+				<div class="col text-center itemTaxRate">Tax Rate</div>
+				<div class="col text-center itemTotal">Item Total</div>
+			</div>
+			<hr>
+    		<!-- Render the items-->
+    		{{#each price as |item|}}
+				{{> items}}
+			{{/each}}
+		</div>
+
+		{{!-- Render button to order --}}
+		<div class="text-end px-5">
+			<a href="/userprofile" class="btn btn-primary btnCancel">Cancel</a>
+			<button type="submit" class="btn btn-primary" id="submitBtn">Submit Order</button>
+		</div>
+		
+	</form>
   </main>
 </div>
+
+<script src="/js/order.js"></script>
