finished ordering system, need pdf making system

--- a/views/partials/invoices.handlebars
+++ b/views/partials/invoices.handlebars
@@ -1,10 +1,6 @@
 <li
   class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 >
-  <h6 class="mb-0">Invoice #
-    {{id}}
-    <br />
-    issuded on :
-    {{format_date due_date}}</h6>
+  <h6 class="mb-0">Invoice # {{id}} - {{format_date due_date}}</h6>
   <button class="btn btn-primary">generate pdf</button>
 </li>
