--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -102,7 +102,7 @@
       </div>
       <!--past invoices if any-->
       <div class="card mt-3">
-        <ul class="list-group list-group-flush">
+        <ul class="list-group">
           {{#each customer.invoices as |invoice|}}
           {{>invoices}}
           {{/each}}
