--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -14,7 +14,7 @@
         {{!-- <a href="/">HOME</a> --}}
 
         <a href="/userprofile">PROFILE</a>
-        <a href="/logout" id="logout">LOGOUT</a>
+        <a href="/api/customers/logout" id="logout">LOGOUT</a>
 
       {{else}}
         <a href="/">HOME</a>
