--- a/views/invoice.handlebars
+++ b/views/invoice.handlebars
@@ -78,7 +78,7 @@
                 <ul class="list-unstyled">
                   <li><strong>Invoiced To</strong></li>
                   <li>{{invoice.customer_name}}</li>
-                  <li>{{invoice.address}}7</li>
+                  <li>{{invoice.address}}</li>
                 </ul>
               </div>
               <div class="invoice-items">
@@ -106,19 +106,7 @@
                     <tfoot>
                       <tr>
                         <th colspan="2" class="text-right">Sub Total:</th>
-                        <th class="text-center">$237.00 USD</th>
-                      </tr>
-                      <tr>
-                        <th colspan="2" class="text-right">20% VAT:</th>
-                        <th class="text-center">$47.40 USD</th>
-                      </tr>
-                      <tr>
-                        <th colspan="2" class="text-right">Credit:</th>
-                        <th class="text-center">$00.00 USD</th>
-                      </tr>
-                      <tr>
-                        <th colspan="2" class="text-right">Total:</th>
-                        <th class="text-center">$284.4.40 USD</th>
+                        <th class="text-center">$237.00</th>
                       </tr>
                     </tfoot>
                   </table>
@@ -126,7 +114,7 @@
               </div>
               <div class="invoice-footer mt25">
                 <p class="text-center">
-                  Generated on {{now}}
+                  Generated on {{now}} <br><br>
                   <a href="#" class="btn btn-default ml15"><i
                       class="fa fa-print mr5"
                     ></i>
