--- a/views/invoice.handlebars
+++ b/views/invoice.handlebars
@@ -117,8 +117,8 @@
               <div class="invoice-footer mt25">
                 <p class="text-center">
                   Generated on {{now}} <br><br>
-                  <button class="btn btn-default" id="printBtn">Print</button>
-				  <button class="btn btn-default" id="downloadBtn">Download</button>
+                  <button class="btn btn-default text-light" id="printBtn">Print</button>
+				  <button class="btn btn-default text-light" id="downloadBtn">Download</button>
                 </p>
               </div>
             </div>
